[tool.poetry]
name = "starknet-components"
version = "0.1.0"
description = "An interactive starknet components exercise"
authors = ["Ritvik S <ritviksingh258@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cairo-lang = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
